Calculator: Version 1.1
1) Исправил на ArrayDeque
2) нет, он бы не выдал Nothing input, просто я ещё передавал скобки в
аргументе, а теперь переделал, чтобы было более понятно читателю.
3) опустил объявление переменной ниже
4) согласен, увидел что производительность падала, исправил. Выше /*
formula = "(" + formula + ")"; */ исправлять не стал, т.к. тут всего 2
операции, а не цикл, т.ч. разница работы будет совсем не заметна.
5) скобки поставил, хотя как по мне, так это наоборот было удобнее, т.к.
разу видно, что при if() выполняется только одно действие (не надо скать
закрывающуюся скобку)